--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,12 +9,12 @@ on:
 
 jobs:
   build:
-    if: github.repository == 'mikepqr/resume.md'
+    if: github.repository == 'yiochou/Resume'
     runs-on: ${{ matrix.os }}
     strategy:
         fail-fast: false
         matrix:
-            os: [ubuntu-latest, macos-latest, windows-latest]
+            os: [macos-latest]
     steps:
     - name: Check out repo
       uses: actions/checkout@v2
@@ -22,16 +22,6 @@ jobs:
       run: pip3 install markdown
     - name: Make resume
       run: python3 resume.py
-    - name: Rename output
-      if: ${{ matrix.os != 'windows-latest' }}
-      run: |
-          mv resume.pdf resume_$RUNNER_OS.pdf
-          mv resume.html resume_$RUNNER_OS.html
-    - name: Rename output (Windows)
-      if: ${{ matrix.os == 'windows-latest' }}
-      run: |
-          mv resume.pdf resume_windows.pdf
-          mv resume.html resume_windows.html
     - name: Archive resume.html and resume.pdf
       uses: actions/upload-artifact@v2
       with:
